...
  <string name="progress_database_full_dialog_title">Maximum storage capacity reached</string>
  <string name="progress_database_full_dialog_description">Saved progress for the lesson \"%s\" will be deleted.</string>
  <string name="progress_database_full_dialog_continue_button">Continue</string>
  <string name="progress_database_full_dialog_leave_without_saving_progress_button">Leave without saving progress</string>
  <string name="progress_database_full_dialog_back_to_lesson_button">Back to lesson</string>
  <string name="topic_practice_master_these_skills">Master These Skills</string>
  <string name="topic_name_text_view">Ratios and Proportional Reasoning</string>
  <string name="topic_practice_skills_description">Select skills that you would like to practice.</string>
  <string name="topic_practice_start">Start</string>
  <string name="info_tab_content_description">Details about the topic.</string>
  <string name="revision_tab_content_description">Revise concepts learned from completed lessons here.</string>
  <string name="practice_tab_content_description">Practice the concepts learned from completed lessons.</string>
  <string name="lessons_tab_content_description">Tap here to start playing a lesson.</string>
...
  <string name="math_expression_error_incomplete_function_name">Did you mean sqrt? If not, please separate the variables with multiplication symbols.</string>
  <string name="math_expression_error_generic">Sorry, we couldn\'t understand your answer. Please check it to make sure there aren\'t any errors.</string>
  <string name="enable_audio_playback_content_description">Enable audio voiceover for this lesson.</string>
  <string name="recently_played_stories">Recently-Played Stories</string>
  <string name="last_played_stories">Last-Played Stories</string>
  <string name="view_all">View All</string>
  <string name="ongoing_story_last_week">Played within the Last Week</string>
  <string name="ongoing_story_last_month">Played within the Last Month</string>
  <string name="story_activity_title">Chapter List</string>
  <string name="lesson_thumbnail_content_description">Image for %s</string>
  <string name="stories_you_can_play">Stories You Can Play</string>
  <string name="navigate_up">Navigate up</string>
  <string name="recently_played_activity">Recently-Played Stories</string>
  <string name="topic_downloaded">Topic Downloaded</string>
  <string name="downloaded">Downloaded</string>
  <string name="question_player_title">Practice Mode</string>
  <string name="question_training_session_progress">Question %1$s of %2$s</string>
  <string name="question_training_session_progress_finished">Complete</string>
  <string name="question_training_session_finished_header">Finished</string>
...
