<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

  <data>

    <import type="android.view.View" />

    <variable
      name="viewModel"
      type="org.oppia.android.app.home.recentlyplayed.SectionTitleViewModel" />
  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
      android:id="@+id/divider_view"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/section_title_divider_view_layout_margin_top"
      android:background="@color/component_color_shared_divider_color"
      android:visibility="@{viewModel.isDividerVisible? View.VISIBLE : View.GONE}" />

    <TextView
      android:id="@+id/section_title_text_view"
      style="@style/TextViewStart"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/section_title_text_view_layout_margin_start"
      android:layout_marginTop="@dimen/section_title_text_view_layout_margin_top"
      android:layout_marginEnd="@dimen/section_title_text_view_layout_margin_end"
      android:fontFamily="sans-serif-medium"
      android:text="@{viewModel.sectionTitleText}"
      android:textColor="@color/component_color_shared_primary_text_color"
      android:textSize="18sp" />
  </LinearLayout>
</layout>
