...
      android:layout_height="match_parent"
      android:clickable="true"
      android:focusable="true"
      android:onClick="@{viewModel::clickOnOngoingStoryTile}">

      <org.oppia.android.app.customview.LessonThumbnailImageView
        android:id="@+id/lesson_thumbnail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@{viewModel.computeLessonThumbnailContentDescription()}"
        android:importantForAccessibility="no"
        app:entityId="@{viewModel.ongoingStory.storyId}"
        app:entityType="@{viewModel.entityType}"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lesson_thumbnail">

        <TextView
          android:id="@+id/story_name_text_view"
          style="@style/Body"
          android:layout_width="match_parent"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="8dp"
          android:ellipsize="end"
...
