<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.home.recentlyplayed.RecentlyPlayedViewModel" />
  </data>

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_color_shared_screen_primary_background_color"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/ongoing_story_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      android:overScrollMode="never"
      android:paddingTop="@dimen/recently_played_fragment_padding_top"
      android:paddingBottom="@dimen/recently_played_fragment_padding_bottom"
      android:scrollbars="none"
      app:data="@{viewModel.recentlyPlayedItems}" />

    <View
      android:id="@+id/recently_played__shadow_view"
      android:layout_width="match_parent"
      android:layout_height="6dp"
      android:background="@drawable/toolbar_drop_shadow" />
  </FrameLayout>
</layout>
